BESTA CD-818 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -106,6 +106,7 @@
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
   <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
+  <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -953,6 +954,16 @@ CASIO EX-word DATAPLUS 6 XD-B4850</h3>
 
 &lowast;
 <a href="umpc/xd-b4850/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="cd-818"></div>
+<h3><img src="img/photos/cd-818.jpg" class="floatLeft"/>
+BESTA CD-818</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/cd-818/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
