--- a/umpc.htm
+++ b/umpc.htm
@@ -109,6 +109,7 @@
   <a href="#cd-85"><img src="img/photos/cd-85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-85"/></a>
   <a href="#cd-88"><img src="img/photos/cd-88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-88"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
+  <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -986,6 +987,16 @@ BESTA CD-818</h3>
 
 &lowast;
 <a href="umpc/cd-818/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="ld-9988"></div>
+<h3><img src="img/photos/ld-9988.jpg" class="floatLeft"/>
+INSTANT-DICT LD-9988</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/ld-9988/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
