BESTA CD-96 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -108,6 +108,7 @@
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#cd-85"><img src="img/photos/cd-85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-85"/></a>
   <a href="#cd-88"><img src="img/photos/cd-88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-88"/></a>
+  <a href="#cd-96"><img src="img/photos/cd-96.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-96"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
   <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
@@ -977,6 +978,16 @@ BESTA CD-88</h3>
 
 &lowast;
 <a href="umpc/cd-88/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="cd-96"></div>
+<h3><img src="img/photos/cd-96.jpg" class="floatLeft"/>
+BESTA CD-96</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/cd-96/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
