BESTA CD-216 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -110,6 +110,7 @@
   <a href="#cd-85"><img src="img/photos/cd-85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-85"/></a>
   <a href="#cd-88"><img src="img/photos/cd-88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-88"/></a>
   <a href="#cd-96"><img src="img/photos/cd-96.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-96"/></a>
+  <a href="#cd-216"><img src="img/photos/cd-216.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-216"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
   <a href="#md28"><img src="img/photos/md28.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD28"/></a>
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
@@ -1001,6 +1002,16 @@ BESTA CD-96</h3>
 
 &lowast;
 <a href="umpc/cd-96/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="cd-216"></div>
+<h3><img src="img/photos/cd-216.jpg" class="floatLeft"/>
+BESTA CD-216</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/cd-216/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
