--- a/umpc.htm
+++ b/umpc.htm
@@ -113,6 +113,7 @@
   <a href="#cd-216"><img src="img/photos/cd-216.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-216"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
   <a href="#md28"><img src="img/photos/md28.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD28"/></a>
+  <a href="#md58"><img src="img/photos/md58.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD58"/></a>
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
   <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
@@ -1032,6 +1033,16 @@ INSTANT-DICT MD28</h3>
 
 &lowast;
 <a href="umpc/md28/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="md58"></div>
+<h3><img src="img/photos/md58.jpg" class="floatLeft"/>
+INSTANT-DICT MD58</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/md58/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
