--- a/umpc.htm
+++ b/umpc.htm
@@ -112,6 +112,7 @@
   <a href="#cd-96"><img src="img/photos/cd-96.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-96"/></a>
   <a href="#cd-216"><img src="img/photos/cd-216.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-216"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
+  <a href="#t3"><img src="img/photos/t3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA T3"/></a>
   <a href="#md28"><img src="img/photos/md28.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD28"/></a>
   <a href="#md58"><img src="img/photos/md58.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD58"/></a>
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
@@ -1023,6 +1024,16 @@ BESTA CD-818</h3>
 
 &lowast;
 <a href="umpc/cd-818/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="t3"></div>
+<h3><img src="img/photos/t3.jpg" class="floatLeft"/>
+BESTA T3</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/t3/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
