INSTANT-DICT MD501 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -115,6 +115,7 @@
   <a href="#t3"><img src="img/photos/t3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA T3"/></a>
   <a href="#md28"><img src="img/photos/md28.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD28"/></a>
   <a href="#md58"><img src="img/photos/md58.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD58"/></a>
+  <a href="#md501"><img src="img/photos/md501.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD501"/></a>
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
   <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
@@ -1054,6 +1055,16 @@ INSTANT-DICT MD58</h3>
 
 &lowast;
 <a href="umpc/md58/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="md501"></div>
+<h3><img src="img/photos/md501.jpg" class="floatLeft"/>
+INSTANT-DICT MD501</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/md501/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
