BESTA CD-216 Updated.

--- a/umpc/cd-216/teardown.htm
+++ b/umpc/cd-216/teardown.htm
@@ -70,7 +70,7 @@
 <img src="teardown/7.jpg" class="maxSize"><br><br>
 
 電池槽<br>
-<img src="teardown/8.jpg" class="maxSize"><br>
+<img src="teardown/8.jpg" class="maxSize"><br><br>
 
 背蓋<br>
 <img src="teardown/9.jpg" class="maxSize"><br><br>
@@ -94,7 +94,7 @@ PCB<br>
 屏<br>
 <img src="teardown/16.jpg" class="maxSize"><br><br>
 
-PT2307、W62426G、WM8728S、FMP3217BA2-H60E、CA158ABA0G JW71009L01<br>
+PT2307、W62426G、WM8728S、CMP3217AA2-H70E、CA158AAA0G JW62001L01<br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
 
 鍵盤面<br>
