BESTA CD-313 Pro Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -111,6 +111,7 @@
   <a href="#cd-88"><img src="img/photos/cd-88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-88"/></a>
   <a href="#cd-96"><img src="img/photos/cd-96.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-96"/></a>
   <a href="#cd-216"><img src="img/photos/cd-216.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-216"/></a>
+  <a href="#cd-313pro"><img src="img/photos/cd-313pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-313 Pro"/></a>
   <a href="#cd-818"><img src="img/photos/cd-818.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-818"/></a>
   <a href="#t3"><img src="img/photos/t3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA T3"/></a>
   <a href="#md28"><img src="img/photos/md28.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD28"/></a>
@@ -1015,6 +1016,16 @@ BESTA CD-216</h3>
 
 &lowast;
 <a href="umpc/cd-216/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="cd-313pro"></div>
+<h3><img src="img/photos/cd-313pro.jpg" class="floatLeft"/>
+BESTA CD-313 Pro</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/cd-313pro/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
