NC-1020 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -120,6 +120,7 @@
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
   <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
   <a href="#pc-1000"><img src="img/photos/pc-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-1000"/></a>
+  <a href="#nc-1020"><img src="img/photos/nc-1020.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 NC-1020"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -1107,6 +1108,16 @@ INSTANT-DICT LD-9988</h3>
 
 &lowast;
 <a href="umpc/pc-1000/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="nc-1020"></div>
+<h3><img src="img/photos/nc-1020.jpg" class="floatLeft"/>
+哈電族 NC-1020</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/nc-1020/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
