HS-1000 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -122,6 +122,7 @@
   <a href="#pc-280"><img src="img/photos/pc-280.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-280"/></a>
   <a href="#pc-1000"><img src="img/photos/pc-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-1000"/></a>
   <a href="#nc-1020"><img src="img/photos/nc-1020.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 NC-1020"/></a>
+  <a href="#hs-1000"><img src="img/photos/hs-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="萊思康 HS-1000"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -1129,6 +1130,16 @@ INSTANT-DICT LD-9988</h3>
 
 &lowast;
 <a href="umpc/nc-1020/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="hs-1000"></div>
+<h3><img src="img/photos/hs-1000.jpg" class="floatLeft"/>
+萊思康 HS-1000</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/hs-1000/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
