--- a/umpc.htm
+++ b/umpc.htm
@@ -107,6 +107,7 @@
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
   <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
+  <a href="#cd-55"><img src="img/photos/cd-55.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-55"/></a>
   <a href="#cd-85"><img src="img/photos/cd-85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-85"/></a>
   <a href="#cd-88"><img src="img/photos/cd-88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-88"/></a>
   <a href="#cd-96"><img src="img/photos/cd-96.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-96"/></a>
@@ -980,6 +981,16 @@ CASIO EX-word DATAPLUS 6 XD-B4850</h3>
 
 &lowast;
 <a href="umpc/xd-b4850/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="cd-55"></div>
+<h3><img src="img/photos/cd-55.jpg" class="floatLeft"/>
+BESTA CD-55</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/cd-55/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
