--- a/umpc.htm
+++ b/umpc.htm
@@ -120,6 +120,7 @@
   <a href="#md501"><img src="img/photos/md501.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT MD501"/></a>
   <a href="#ld-7700"><img src="img/photos/ld-7700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-7700"/></a>
   <a href="#ld-9988"><img src="img/photos/ld-9988.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="INSTANT-DICT LD-9988"/></a>
+  <a href="#sd600"><img src="img/photos/sd600.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 SD600"/></a>
   <a href="#pc-280"><img src="img/photos/pc-280.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-280"/></a>
   <a href="#pc-1000"><img src="img/photos/pc-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-1000"/></a>
   <a href="#nc-1020"><img src="img/photos/nc-1020.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 NC-1020"/></a>
@@ -1111,6 +1112,16 @@ INSTANT-DICT LD-9988</h3>
 
 &lowast;
 <a href="umpc/ld-9988/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="sd600"></div>
+<h3><img src="img/photos/sd600.jpg" class="floatLeft"/>
+哈電族 SD600</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/sd600/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
