Docker How to start container with root privilege

--- a/system.htm
+++ b/system.htm
@@ -432,6 +432,10 @@ docker.sock</a><br>
 如何跑多個相同Image的Container</a><br>
 
 &lowast;
+<a href="system/docker/root.htm">
+如何啟一個有root權限的container</a><br>
+
+&lowast;
 <a href="system/docker/fix_139.htm">
 解決"executor failed running exit code: 139"問題</a><br>
 
