--- a/umpc.htm
+++ b/umpc.htm
@@ -97,6 +97,7 @@
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
   <a href="#v80"><img src="img/photos/v80.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V80"/></a>
+  <a href="#v300"><img src="img/photos/v300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V300"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
@@ -882,6 +883,16 @@ Canon wordtank V80</h3>
 
 &lowast;
 <a href="umpc/v80/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="v300"></div>
+<h3><img src="img/photos/v300.jpg" class="floatLeft"/>
+Canon wordtank V300</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/v300/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
