--- a/umpc.htm
+++ b/umpc.htm
@@ -100,6 +100,7 @@
   <a href="#v300"><img src="img/photos/v300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V300"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
+  <a href="#xd-f4100"><img src="img/photos/xd-f4100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F4100"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
   <a href="#xd-lp9300"><img src="img/photos/xd-lp9300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-LP9300"/></a>
   <a href="#xd-st4800"><img src="img/photos/xd-st4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 2 XD-ST4800"/></a>
@@ -913,6 +914,16 @@ CASIO EW-V3600L</h3>
 
 &lowast;
 <a href="umpc/ew-v3600l/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-f4100"></div>
+<h3><img src="img/photos/xd-f4100.jpg" class="floatLeft"/>
+CASIO EX-word XD-F4100</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-f4100/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
