--- a/umpc.htm
+++ b/umpc.htm
@@ -94,6 +94,7 @@
   <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
   <a href="#pw-9500"><img src="img/photos/pw-9500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-9500"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
+  <a href="#pw-ac110"><img src="img/photos/pw-ac110.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC110"/></a>
   <a href="#pw-ac880"><img src="img/photos/pw-ac880.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC880"/></a>
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
@@ -848,6 +849,16 @@ SHARP PW-G5200</h3>
 
 &lowast;
 <a href="umpc/pw-g5200/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-ac110"></div>
+<h3><img src="img/photos/pw-ac110.jpg" class="floatLeft"/>
+SHARP Brain PW-AC110</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-ac110/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
