C3200 Added jtag pinout.

--- a/umpc.htm
+++ b/umpc.htm
@@ -590,6 +590,10 @@ Zaurus SL-C3200</h3>
 更換電池</a><br>
 
 &lowast;
+<a href="umpc/c3200/jtag.htm">
+JTAG腳位</a><br>
+
+&lowast;
 <a href="umpc/c3200/wifi.htm">
 Wifi改造</a><br>
 
