C860 Fixed wrong fastpllclk setting.

--- a/umpc/c860/zubuntu_fix_clk.htm
+++ b/umpc/c860/zubuntu_fix_clk.htm
@@ -48,10 +48,13 @@
 <p><b>解決屏幕閃爍問題</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://www.oesf.org/forum/index.php?topic=7975.0">osef</a><br><br>
+
 如下：
 </p>
 <pre>
-# echo 1 > /sys/devices/platform/sharp-scoop/corgi-ssp/w100fb/fastpllclk
+# echo 75 &gt; /sys/devices/platform/sharp-scoop/corgi-ssp/w100fb/fastpllclk
 </pre><br>
 
 <p>
