Linux Device Driver How to enable dynamic debug.

--- a/driver.htm
+++ b/driver.htm
@@ -323,6 +323,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 如何調整fbcon的字型</a><br>
 
 &lowast;
+<a href="driver/ldd/dynamic_debug.htm">
+如何開啟dynamic debug</a><br>
+
+&lowast;
 <a href="driver/ldd/task_st.htm">
 如何取得目前task struct</a><br>
 
