CASIO fx-39 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -102,6 +102,7 @@
   <a href="#v80"><img src="img/photos/v80.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V80"/></a>
   <a href="#v300"><img src="img/photos/v300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V300"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
+  <a href="#fx-39"><img src="img/photos/fx-39.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO fx-39"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f4100"><img src="img/photos/xd-f4100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F4100"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
@@ -942,6 +943,16 @@ Canon wordtank V903</h3>
 
 &lowast;
 <a href="umpc/v903/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="fx-39"></div>
+<h3><img src="img/photos/fx-39.jpg" class="floatLeft"/>
+CASIO fx-39</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/fx-39/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
