--- a/umpc.htm
+++ b/umpc.htm
@@ -132,6 +132,7 @@
   <a href="#pc-1000"><img src="img/photos/pc-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 PC-1000"/></a>
   <a href="#nc-1020"><img src="img/photos/nc-1020.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="哈電族 NC-1020"/></a>
   <a href="#hs-1000"><img src="img/photos/hs-1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="萊思康 HS-1000"/></a>
+  <a href="#840"><img src="img/photos/840.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="OMRON 840"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -1243,6 +1244,16 @@ INSTANT-DICT LD-9988</h3>
 
 &lowast;
 <a href="umpc/hs-1000/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="840"></div>
+<h3><img src="img/photos/840.jpg" class="floatLeft"/>
+OMRON 840</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/840/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
