CASIO EX-word XD-F6700 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -105,6 +105,7 @@
   <a href="#fx-39"><img src="img/photos/fx-39.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO fx-39"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f4100"><img src="img/photos/xd-f4100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F4100"/></a>
+  <a href="#xd-f6700"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F6700"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
   <a href="#xd-lp9300"><img src="img/photos/xd-lp9300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-LP9300"/></a>
   <a href="#xd-st4800"><img src="img/photos/xd-st4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 2 XD-ST4800"/></a>
@@ -974,6 +975,16 @@ CASIO EX-word XD-F4100</h3>
 
 &lowast;
 <a href="umpc/xd-f4100/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-f6700"></div>
+<h3><img src="img/photos/xd-f9000.jpg" class="floatLeft"/>
+CASIO EX-word XD-F6700</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-f6700/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
