Canon wordtank M300 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -99,6 +99,7 @@
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
   <a href="#pw-sh5"><img src="img/photos/pw-sh5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH5"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
+  <a href="#m300"><img src="img/photos/m300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank M300"/></a>
   <a href="#v80"><img src="img/photos/v80.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V80"/></a>
   <a href="#v300"><img src="img/photos/v300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V300"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
@@ -915,6 +916,16 @@ SEIKO SR9200</h3>
 
 &lowast;
 <a href="umpc/sr9200/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="m300"></div>
+<h3><img src="img/photos/m300.jpg" class="floatLeft"/>
+Canon wordtank M300</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/m300/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
