SHARP Papyrus PW-A8400 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -89,6 +89,7 @@
   <a href="#mi-p10-s"><img src="img/photos/mi-p10-s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-P10-S"/></a>
   <a href="#mi-ex1"><img src="img/photos/mi-ex1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-EX1"/></a>
   <a href="#mi-tr1"><img src="img/photos/mi-tr1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-TR1"/></a>
+  <a href="#pw-a8400"><img src="img/photos/pw-a8400.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-A8400"/></a>
   <a href="#pw-am700"><img src="img/photos/pw-am700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AM700"/></a>
   <a href="#pw-at760"><img src="img/photos/pw-at760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AT760"/></a>
   <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
@@ -801,6 +802,16 @@ Zaurus MI-TR1</h3>
 
 &lowast;
 <a href="umpc/mi-tr1/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-a8400"></div>
+<h3><img src="img/photos/pw-a8400.jpg" class="floatLeft"/>
+SHARP Papyrus PW-A8400</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-a8400/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
