CASIO EX-word DATAPLUS 4 XD-SP4800 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -114,6 +114,7 @@
   <a href="#xd-sf6200"><img src="img/photos/xd-sf6200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6200"/></a>
   <a href="#xd-sf6300"><img src="img/photos/xd-sf6300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6300"/></a>
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
+  <a href="#xd-sp4800"><img src="img/photos/xd-sp4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SP4800"/></a>
   <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#xd-u9800"><img src="img/photos/xd-u9800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 8 XD-U9800"/></a>
@@ -1068,6 +1069,16 @@ CASIO EX-word DATAPLUS 4 XD-SF6350</h3>
 
 &lowast;
 <a href="umpc/xd-sf6350/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-sp4800"></div>
+<h3><img src="img/photos/xd-sp4800.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 4 XD-SP4800</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-sp4800/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
