SEIKO SR-G8100 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -99,6 +99,7 @@
   <a href="#pw-ac880"><img src="img/photos/pw-ac880.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC880"/></a>
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
   <a href="#pw-sh5"><img src="img/photos/pw-sh5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH5"/></a>
+  <a href="#sr-g8100"><img src="img/photos/sr-g8100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR-G8100"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
   <a href="#m300"><img src="img/photos/m300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank M300"/></a>
   <a href="#v80"><img src="img/photos/v80.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V80"/></a>
@@ -919,6 +920,16 @@ SHARP Brain PW-SH5</h3>
 
 &lowast;
 <a href="umpc/pw-sh5/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="sr-g8100"></div>
+<h3><img src="img/photos/sr-g8100.jpg" class="floatLeft"/>
+SEIKO SR-G8100</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/sr-g8100/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
