SHARP Papyrus PW-TC900 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -93,6 +93,7 @@
   <a href="#pw-am700"><img src="img/photos/pw-am700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AM700"/></a>
   <a href="#pw-at760"><img src="img/photos/pw-at760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AT760"/></a>
   <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
+  <a href="#pw-tc900"><img src="img/photos/pw-tc900.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-TC900"/></a>
   <a href="#pw-9500"><img src="img/photos/pw-9500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-9500"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
   <a href="#pw-ac110"><img src="img/photos/pw-ac110.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC110"/></a>
@@ -848,6 +849,16 @@ SHARP Papyrus PW-U5100</h3>
 
 &lowast;
 <a href="umpc/pw-u5100/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-tc900"></div>
+<h3><img src="img/photos/pw-tc900.jpg" class="floatLeft"/>
+SHARP Papyrus PW-TC900</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-tc900/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
