T113-S3 Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -120,6 +120,7 @@
   <a href="#teensy-3.2"><img src="img/photos/teensy-3.2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-M4) MK20DX256"/></a>
   <a href="#teensy-4.0"><img src="img/photos/teensy-4.0.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-M7) RT1062"/></a>
   <a href="#2g-iot"><img src="img/photos/2g-iot.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A5) RDA8810PL"/></a>
+  <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3"/></a>
   <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S"/></a>
   <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
   <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
@@ -140,7 +141,6 @@
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
   <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906"/></a>
   <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133"/></a>
-  <a href="#t133"><img src="img/photos/t133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) T133"/></a>
   <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103"/></a>
   <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210"/></a>
   <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
@@ -2481,6 +2481,16 @@ pinout(dip switch)</a><br>
 如何輸出詳細的Kernel訊息</a><br>
 <br><br><br><br>
 
+<div id="t113-s3"></div>
+<h3><img src="img/photos/t113-s3.jpg" class="floatLeft"/>
+<b>(ARM Cortex-A7)</b> T113-S3</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/t113-s3/sch.htm">
+電路圖</a><br>
+<br><br><br><br>
+
 <div id="lichee-zero"></div>
 <h3><img src="img/photos/lichee-zero.jpg" class="floatLeft"/>
 <b>(ARM Cortex-A7)</b> V3S</h3>
@@ -3090,12 +3100,6 @@ Register</a><br>
 <div id="f133"></div>
 <h3><img src="img/photos/f133.jpg" class="floatLeft"/>
 <b>(RISC-V)</b> F133</h3>
-<hr size="1"><br><br><br><br><br>
-<br><br><br><br>
-
-<div id="t133"></div>
-<h3><img src="img/photos/t133.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> T133</h3>
 <hr size="1"><br><br><br><br><br>
 <br><br><br><br>
 
