F133-A Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3099,8 +3099,12 @@ Register</a><br>
 
 <div id="f133"></div>
 <h3><img src="img/photos/f133.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> F133</h3>
+<b>(RISC-V)</b> F133-A</h3>
 <hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/f133-a/sch.htm">
+電路圖</a><br>
 <br><br><br><br>
 
 <div id="gd32vf103"></div>
