--- a/umpc.htm
+++ b/umpc.htm
@@ -360,6 +360,10 @@ Zaurus SL-C860</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/c860/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="umpc/c860/batt.htm">
 更換電池</a><br>
 
