SHARP Brain PW-AC110 Added teardown images.

--- a/umpc/pw-ac110/teardown.htm
+++ b/umpc/pw-ac110/teardown.htm
@@ -102,7 +102,11 @@ BD=BL H1A、25L3205DM2I、ST3210-BG、IS42SM16800F、K9GAG08U0D<br>
 <img src="teardown/19.jpg" class="maxSize"><br><br>
 
 FPC<br>
-<img src="teardown/20.jpg" class="maxSize">
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+QPWBM0787TPZZ(LQ043T1DG04)<br>
+<img src="teardown/21.jpg" class="maxSize"><br>
+<img src="teardown/22.jpg" class="maxSize">
 </p>
 
 <p>
