Sharp Zaurus C3200 Fix charge issue (too slowly).

--- a/umpc.htm
+++ b/umpc.htm
@@ -632,6 +632,10 @@ Recovery</a><br>
 修改USB限流電阻</a><br>
 
 &lowast;
+<a href="umpc/c3200/fix_charge.htm">
+解決充電太慢的問題</a><br>
+
+&lowast;
 <a href="umpc/c3200/build_rtl8188eus.htm">
 build rtl8188eus</a><br>
 
