Zipit Z1 Update title.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1385,7 +1385,7 @@ Upload程式(Python)</a><br>
 
 &lowast;
 <a href="umpc/zipit1/build_kernel.htm">
-build kernel</a><br>
+build kernel 2.4.21</a><br>
 
 &oplus;
 <b>Assembly</b><br>
