--- a/umpc/zipit1/build_kernel.htm
+++ b/umpc/zipit1/build_kernel.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Zipit Z1</h3>
-<p><b>build kernel</b></p>
+<p><b>build kernel 2.4.21</b></p>
 <hr size="1">
 <p>
 編譯步驟如下：
