Zipit Z1 Updated UART images.

--- a/umpc/zipit1/uart.htm
+++ b/umpc/zipit1/uart.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushScad.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -54,11 +54,30 @@
 焊點位置如下：<br>
 <img src="uart/1.jpg" class="maxSize"><br><br>
 
-司徒把DBG拉出來，然後焊了一個電源開源，接著把RX1和RX2接在一起(司徒的UART腳位為：TX、RX、GND、VCC)<br>
+司徒把DBG拉出來，然後焊了一個電源開關，接著把RX1和RX2接在一起，當成RX使用<br>
 <img src="uart/2.jpg" class="maxSize"><br><br>
 
 完成<br>
 <img src="uart/3.jpg" class="maxSize"><br><br>
+
+為了更漂亮的外觀，司徒重新跳線<br>
+<img src="uart/4.jpg" class="maxSize"><br><br>
+
+外觀<br>
+<img src="uart/5.jpg" class="maxSize"><br><br>
+
+修補元件<br>
+<img src="uart/6.jpg" class="maxSize"><br><br>
+
+OpenSCAD
+</p>
+<pre class="brush:scad">
+cube([20, 4, 1.5]);
+cube([8, 8, 1.5]);
+</pre><br>
+<p>
+完美<br>
+<img src="uart/7.jpg" class="maxSize"><br><br>
 
 Baudrate: 57600bps
 </p>
