Linux Device Driver Updated description.

--- a/driver/ldd/pr_vs_dev.htm
+++ b/driver/ldd/pr_vs_dev.htm
@@ -55,7 +55,8 @@ pr_xxx()建議使用在Kernel Module<br>
 dev_xxx()則是建議使用在Device Driver<br><br>
 
 級別如下：<br>
-<img src="pr_vs_dev/1.jpg" class="maxSize">
+<img src="pr_vs_dev/1.jpg" class="maxSize"><br>
+P.S. 要使用pr_xxx()、dev_xxx()時，記得要打開<a href="dynamic_debug.htm">dynamic debug</a>
 </p>
 
 <p>
