Rust Added setup page.

--- a/program.htm
+++ b/program.htm
@@ -75,6 +75,7 @@
 <br><br>
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
+  <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
   <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
   <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="NASM"/></a>
   <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
@@ -299,6 +300,16 @@ build binutils(support arm)</a><br>
 &lowast;
 <a href="program/gnu/fix_undef_limb.htm">
 解決"undefined reference to __gmpn_invert_limb"問題</a>
+<br><br><br><br>
+
+<div id="rust"></div>
+<h3><img src="img/photos/rust.jpg" class="floatLeft"/>
+Rust</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="program/rust/setup.htm">
+開發環境</a><br>
 <br><br><br><br>
 
 <div id="masm32"></div>
