Rust Added 'Hello, world!' example.

--- a/program.htm
+++ b/program.htm
@@ -310,6 +310,10 @@ Rust</h3>
 &lowast;
 <a href="program/rust/setup.htm">
 開發環境</a><br>
+  
+&lowast;
+<a href="program/rust/hello.htm">
+Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="masm32"></div>
