Rust An example to show how to fill color for SDL v1.2 program by using Rust language.

--- a/program.htm
+++ b/program.htm
@@ -314,6 +314,13 @@ Rust</h3>
 &lowast;
 <a href="program/rust/hello.htm">
 Hello, world!</a><br>
+
+&oplus;
+<b>SDL v1.2</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/rust/sdl_fillcolor.htm">
+  Fill Color</a><br>
 <br><br><br><br>
 
 <div id="masm32"></div>
