Rust Tuned code.

--- a/program/rust/sdl_fillcolor.htm
+++ b/program/rust/sdl_fillcolor.htm
@@ -131,7 +131,7 @@ fn main() {
     let mut screen;
 
     unsafe {
-        let mut rt : SDL_Rect = {SDL_Rect{x:0, y:0, w:320, h:240}};
+        let mut rt = SDL_Rect{x:0, y:0, w:320, h:240};
 
         SDL_Init(SDL_INIT_VIDEO);
         screen = SDL_SetVideoMode(320, 240, 16, SDL_SWSURFACE);
