--- a/program.htm
+++ b/program.htm
@@ -319,6 +319,10 @@ Hello, world!</a><br>
 <b>SDL v1.2</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/rust/sdl_hello.htm">
+  Hello, world!</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/rust/sdl_fillcolor.htm">
   Fill Color</a><br>
 <br><br><br><br>
