Rust Updated reference link.

--- a/program/rust/sdl_hello.htm
+++ b/program/rust/sdl_hello.htm
@@ -49,7 +49,8 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/sdl-v1.2_in_rust/blob/master/src/sdl-demo/main.rs">rust-sdl</a><br><br>
+1. <a href="https://github.com/steward-fu/sdl-v1.2_in_rust/blob/master/src/sdl-demo/main.rs">rust-sdl</a><br>
+2. <a href="https://users.rust-lang.org/t/calling-c-function-with-string/41448/10">calling-c-function-with-string</a><br><br>
 
 main.rs
 </p>
