Rust An example to show how to draw box for SDL v1.2 program in Rust language.

--- a/program.htm
+++ b/program.htm
@@ -325,6 +325,11 @@ Hello, world!</a><br>
   &emsp;&emsp;&lowast;
   <a href="program/rust/sdl_fillcolor.htm">
   Fill Color</a><br>
+      
+  &emsp;&emsp;&lowast;
+  <a href="program/rust/sdl_drawbox.htm">
+  Draw Box</a><br>
+
 <br><br><br><br>
 
 <div id="masm32"></div>
