Rust An example to show how to load bmp image for SDL v1.2 program in Rust language.

--- a/program.htm
+++ b/program.htm
@@ -330,6 +330,10 @@ Hello, world!</a><br>
   <a href="program/rust/sdl_drawbox.htm">
   Draw Box</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/rust/sdl_loadbmp.htm">
+  Load BMP</a><br>
+
 <br><br><br><br>
 
 <div id="masm32"></div>
