GNU C++ An example to show how to set process capability in C language.

--- a/program.htm
+++ b/program.htm
@@ -153,6 +153,10 @@ GNU</h3>
   lz77 compress</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_cap.htm">
+  CAP_SYS_ADMIN</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_rawfb.htm">
   write framebuffer</a><br>
 
