Debian How to install chinese fonts.

--- a/system.htm
+++ b/system.htm
@@ -92,6 +92,10 @@ Debian</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="system/debian/fonts.htm">
+中文字型</a><br>
+
+&lowast;
 <a href="system/debian/file_attribute.htm">
 檔案屬性</a><br>
 
