Legacy Driver An example to show how to share memory between device driver and user application.

--- a/driver.htm
+++ b/driver.htm
@@ -1376,6 +1376,10 @@ Windows NT Driver (Legacy)</h3>
   &emsp;&emsp;&lowast;
   <a href="driver/legacy/cpp_csq.htm">
   Cancel-Safe IRP Queue(CSQ)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="driver/legacy/cpp_share_memory.htm">
+  Share Memory</a><br>
 <br><br><br><br>
 
 <div id="mdd"></div>
